k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-deployment-service
spec:
  type: ClusterIP  # <--- obligatorio cuando usas Ingress
  selector:
    app: frontend-deployment
  ports:
    - port: 80          # Puerto que expone el servicio dentro del cluster
      targetPort: 3001  # Puerto donde escucha tu contenedor (React/Vue/Next/etc)
